# bevy-wfc

./: Cargo.toml
.cargo/: config.toml
.trunk/: trunk.yaml
assets/rules/: default.rules
src/: main.rs  wfc.rs
src/wfc/: cell.rs  mod.rs  tile_map.rs  tile_rules.rs  tile_type.rs
src/wfc_plugin/: mod.rs
