[package]
name = "wfc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "0.8.5"
bevy_common_assets = { version = "0.1.0", features = ["json"] }
bevy_ecs_tilemap = "0.6.0"
